PDF: Check for alternate right click method on Mac.

On Mac, If a user ctrl + left clicks in the PDF Viewer, it opens the
context menu like a right click. The PDF Viewer will only receive the
mouse down event from the left click, but not the mouse up, which makes
the PDF Viewer believe the left mouse button is held down.

Handle this case by turning the ctrl + left click mouse down event into
a right click event.

BUG=751166

Change-Id: I6669fbbd9f1a2e4155dc2e8735391d3f726e19d3